--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,13 +109,32 @@
         android:layout_width="match_parent"
         android:layout_height="20sp" />
 
-    <Button
-        android:id="@+id/check_permission"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#007AB7"
-        android:text="permission"
-        tools:textColor="#FFFFFF" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/check_permission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#007AB7"
+            android:text="permission"
+            tools:textColor="#FFFFFF" />
+
+        <Space
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/select_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#007AB7"
+            android:text="select file"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -181,13 +200,51 @@
         android:layout_width="match_parent"
         android:layout_height="10sp" />
 
-    <Button
-        android:id="@+id/wifi_rtt"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#009250"
-        android:text="start"
-        android:textColor="#FFFFFF" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/wifi_rtt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#009250"
+            android:text="start"
+            android:textColor="#FFFFFF" />
+
+        <Space
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#009250"
+            android:text="reset"
+            android:textColor="#FFFFFF" />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30sp" />
+
+    <TextView
+        android:id="@+id/result_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#007AB7"
+        android:textSize="36sp" />
+
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#007AB7"
+        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
