--- a/app/src/main/res/layout/activity_localize.xml
+++ b/app/src/main/res/layout/activity_localize.xml
@@ -126,6 +126,48 @@
         android:layout_height="20sp"
         android:layout_weight="1" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="通信端末選択"
+            android:textColor="#C7243A"
+            android:textSize="30sp" />
+
+        <Spinner
+            android:id="@+id/peerSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rp_num"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center"
+            android:hint="観測ポイントの番号を入力してください"/>
+
+
+    </LinearLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="40sp" />
@@ -155,6 +197,15 @@
             android:textSize="36sp"/>
     </LinearLayout>
 
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="40sp" />
+
+    <TextView
+        android:id="@+id/counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <Space
         android:layout_width="match_parent"
