基地局との通信機能の追加

--- a/app/src/main/res/layout/activity_localize.xml
+++ b/app/src/main/res/layout/activity_localize.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:background="#4DFFC107"
-    tools:context=".LocalizeActivity">
+    tools:context=".was.LocalizeActivity">
 
     <Button
         android:id="@+id/back"
