--- a/app/src/main/res/layout/activity_ranging.xml
+++ b/app/src/main/res/layout/activity_ranging.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:background="#CAE7F2"
-    tools:context=".RangingActivity">
+    tools:context=".was.RangingActivity">
 
 
     <Button
