--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,151 +10,236 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="40sp" />
+        android:layout_height="0sp"
+        android:layout_weight="10"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="WiFi確認"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:text="@string/wifi_conf"
         android:textColor="#007AB7"
         android:textSize="30sp" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="10sp" />
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Android Wifi supports Wi-Fi Aware :"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/aware_check"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="3"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Android Wifi supports RTT : "
+            android:text="@string/wifi_support"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/rtt_check"
+            android:id="@+id/support_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20sp" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wi-Fi Aware is available : "
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/aware_avail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:textSize="18sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="3"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wi-Fi RTT is available : "
+            android:text="@string/wifi_availavle"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/rtt_avail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:textSize="18sp" />
+
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="20sp" />
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:text="端末番号入力"
+        android:layout_gravity="center"
+        android:textColor="#007AB7"
+        android:textSize="30sp" />
+
+    <EditText
+        android:id="@+id/deviceID"
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:layout_gravity="center"
+        android:hint="番号を入力してください"
+        android:textSize="15sp"></EditText>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:text="@string/configuration"
+        android:textSize="30sp"
+        android:textColor="#007AB7"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+        <Space
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
-            android:text="端末番号入力"
-            android:layout_gravity="center"
-            android:textColor="#007AB7"
-            android:textSize="30sp" />
+            android:layout_weight="1"/>
 
         <EditText
-            android:id="@+id/deviceID"
-            android:layout_width="wrap_content"
+            android:id="@+id/distance"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:gravity="right"
+            android:hint="基地局との距離を入力してください"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center"
-            android:hint="番号を入力してください"></EditText>
+            android:text="m"
+            android:textSize="20sp"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="10sp" />
+        android:layout_height="0sp"
+        android:layout_weight="1"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_weight="10"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/N_button"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="@string/N"
+            android:background="#97D3E3"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <Button
+            android:id="@+id/S_button"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="@string/S"
+            android:background="#97D3E3"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <Button
+            android:id="@+id/E_button"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="@string/E"
+            android:background="#97D3E3"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <Button
+            android:id="@+id/W_button"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:text="@string/W"
+            android:background="#97D3E3"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"/>
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="モード選択"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:text="@string/mode"
         android:textColor="#EDAD0B"
         android:textSize="30sp" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="10sp" />
+        android:layout_height="0sp"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:visibility="visible"
@@ -165,26 +250,55 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#EDAD0B"
-            android:text="基地局"
+            android:text="@string/station"
             android:textColor="#FFFFFF" />
 
         <Space
             android:layout_width="20sp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/sta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#EDAD0B"
-            android:text="移動端末"
+            android:text="@string/terminal"
             android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="80sp" />
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
+
+    <Button
+        android:id="@+id/magnetic"
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:background="#EDAD0B"
+        android:text="@string/geomagnetic"
+        android:textColor="#FFFFFF" />
+
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="2"/>
+
+    <Button
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:background="#EDAD0B"
+        android:text="@string/file"
+        android:textColor="#FFFFFF" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="10"/>
 
 </LinearLayout>
