--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -267,12 +267,49 @@
 
     </LinearLayout>
 
-
     <Space
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="15"/>
+        android:layout_weight="10"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="5"
+        android:gravity="center">
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+
+        <Button
+            android:id="@+id/cc1f"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="@string/cc1f"
+            android:background="#97D3E3"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <Button
+            android:id="@+id/cc5f"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="@string/cc5f"
+            android:background="#0086AB"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
