--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,14 +87,33 @@
         android:textColor="#007AB7"
         android:textSize="30sp" />
 
-    <EditText
-        android:id="@+id/deviceID"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="5"
-        android:layout_gravity="center"
-        android:hint="@string/input_number"
-        android:textSize="15sp"/>
+        android:orientation="horizontal">
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+        <EditText
+            android:id="@+id/deviceID"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:hint="@string/input_number"
+            android:textSize="15sp"/>
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+
+    </LinearLayout>
 
 
     <Space
@@ -112,13 +131,8 @@
         android:textColor="#EDAD0B"
         android:textSize="30sp" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"/>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="5"
         android:gravity="center_vertical"
@@ -126,42 +140,73 @@
         android:visibility="visible"
         tools:visibility="visible">
 
+        <Space
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"/>
+
         <Button
             android:id="@+id/ap"
-            android:layout_width="wrap_content"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
+            android:layout_weight="5"
             android:background="#EDAD0B"
             android:text="@string/station"
             android:textColor="#FFFFFF" />
 
         <Space
             android:layout_width="20sp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
 
         <Button
             android:id="@+id/sta"
-            android:layout_width="match_parent"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
+            android:layout_weight="5"
             android:background="#EDAD0B"
             android:text="@string/terminal"
             android:textColor="#FFFFFF" />
+
+        <Space
+            android:layout_width="20sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"/>
 
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_weight="2"/>
+        android:layout_weight="3"/>
 
-    <Button
-        android:id="@+id/magnetic"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="5"
-        android:background="#EDAD0B"
-        android:text="@string/geomagnetic"
-        android:textColor="#FFFFFF" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+
+        <Button
+            android:id="@+id/magnetic"
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="12"
+            android:background="#23AC0E"
+            android:text="@string/geomagnetic"
+            android:textColor="#FFFFFF" />
+
+        <Space
+            android:layout_width="0sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"/>
+
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
